--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <!-- 精簡code +a -->
-    <!-- header -->
+    <!-- 精簡code +a +svg+btn-->
+    <!-- topbar -->
     <header id="topbar">
         <nav>
             <ul class="menu">
@@ -26,22 +26,35 @@
         </nav>
         <h1 class="logo">
             <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo.png" alt="logo">
+                <img src="img/index/index-topbar/logo.svg" alt="logo">
             </a>
         </h1>
         <nav>
             <ul class="icon">
                 <li class="box">
-                    <div class="signup"></div>
-                    <div class="word"><a href="signup.html">立即報名</a></div>
+                    <!-- 0.原本的底色 -->
+                    <!-- <div class="signup"></div> -->
+                    <!-- 改用btn -->
+                    <div >
+                        <div class="m_btn">
+                            <a href="signup.html">快速報名</a>
+                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                        </div>
+                    </div>
+                    <!-- 0.原本 -->
+                    <!-- <div class="word">
+                        <a href="signup.html">快速報名</a>
+                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
+                    </div> -->
+
                 </li>
                 <li>
-                    <span><img src="img/index/index-topbar/user.png" alt="登入"></span>
+                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
                     <span><a href="login.html">登入</a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/newcar.png" alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
                     </a>
                 </li>
             </ul>
@@ -65,11 +78,11 @@
                     </p>
                     <div class="more">
                         <a href="about.html">查看更多</a>
-                        <img src="img/index/index-about/深色右箭頭1x.png" alt="">
+                        <img src="img/index/index-about/arrow(黑).svg" alt="">
                     </div>
                     <!-- test -->
                     <div class="bg_logo">
-                        <img src="img/index/index-about/zangan 大logo.png" alt="">
+                        <img src="img/index/index-about/EN-logo.svg" alt="">
                     </div>
                 </div>
             </span>
@@ -93,10 +106,13 @@
             <!-- <div class="course_nav"> -->
             <li class="f">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo.png" width="14"
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
                             height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>藝術插花</h3>
+                    </span>
+                    <span>
+                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                     </span>
                 </span>
                 <div>
@@ -107,7 +123,7 @@
                         </p>
                         <div class="course_more">
                             <a href="course_flower.html">查看更多</a>
-                            <img src="img/index/index-course/白右箭頭1x.png" alt="">
+                            <img src="img/index/index-course/arrow(白).png" alt="">
                         </div>
                     </div>
                 </div>
@@ -116,10 +132,13 @@
             <!-- 自由繪畫 paint-->
             <li class="pai">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo.png" width="14"
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
                             height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>自由繪畫</h3>
+                    </span>
+                    <span>
+                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                     </span>
                 </span>
                 <div>
@@ -130,7 +149,7 @@
                         </p>
                         <div class="course_more">
                             <a href="course_paint.html">查看更多></a>
-                            <img src="img/index/index-course/白右箭頭1x.png" alt="">
+                            <img src="img/index/index-course/arrow(白).png" alt="">
                         </div>
                     </span>
                 </div>
@@ -138,10 +157,13 @@
             <!--蘵感手作 handmade -->
             <li class="h">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo.png" width="14"
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
                             height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>蘵感手作</h3>
+                    </span>
+                    <span>
+                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                     </span>
                 </span>
                 <div>
@@ -152,7 +174,7 @@
                         </p>
                         <div class="course_more">
                             <a href="course_handmade.html">查看更多></a>
-                            <img src="img/index/index-course/白右箭頭1x.png" alt="">
+                            <img src="img/index/index-course/logo.png" alt="">
                         </div>
                     </span>
                 </div>
@@ -160,10 +182,13 @@
             <!-- 香水特製Lab purfume -->
             <li class="pu">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo.png" width="14"
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
                             height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>香水特製Lab</h3>
+                    </span>
+                    <span>
+                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                     </span>
                 </span>
                 <div>
@@ -182,10 +207,13 @@
             <!-- 小點茶藝工坊 dessert-->
             <li class="d">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo.png" width="14"
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
                             height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>小點茶藝工坊</h3>
+                    </span>
+                    <span>
+                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
                     </span>
                 </span>
                 <div>
@@ -329,7 +357,7 @@
                                 <hr>
                             </div>
                             <div class="news_img">
-                                <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                                <a href="news_page_nov.html"><img src="img/index/index-news/smell.png" alt=""></a>
                             </div>
                             </p>
                         </tr>
