--- a/蘵感ZanGan上傳/news.html
+++ b/蘵感ZanGan上傳/news.html
@@ -81,7 +81,7 @@
                                     <hr>
                                 </div>
                                 <div class="news_img">
-                                    <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg"
+                                    <a href="news_page_nov.html"><img src="img/index/index-news/smell.png"
                                             alt=""></a>
                                 </div>
                                 </p>
