--- a/蘵感ZanGan上傳/news_page_stoppaint.html
+++ b/蘵感ZanGan上傳/news_page_stoppaint.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
-    <title>[活動快訊] 11月美學下午茶報名開始了～</title>
+    <title>【課程異動】11/20 藝術油畫下午班，停課一次。</title>
     <link rel="stylesheet" href="news media.css">
     <script src="script.js"></script>
 
@@ -69,7 +69,7 @@
                     <div class="news_page_section">
                         <!-- 標題 -->
                         <div class="news_page_title">
-                            <h1>[活動快訊] 11月美學下午茶報名開始了～</h1>
+                            <h1>【課程異動】11/20 藝術油畫下午班，停課一次。</h1>
                         </div>
                         <!-- 圖片 -->
                         <div class="news_page_img">
