--- a/蘵感ZanGan上傳/media.html
+++ b/蘵感ZanGan上傳/media.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang="zh-Hant-TW">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex,nofollow" />
     <title>蘵感文章</title>
     <link rel="stylesheet" href="news media.css">
-    <script src="Javascript.js"></script>
-
 </head>
 
 <body>
-    <!-- 精簡code +a -->
-    <!-- header -->
+
+    <!-- 精簡code +a +svg+btn-->
+    <!-- topbar -->
     <header id="topbar">
         <nav>
             <ul class="menu">
@@ -26,94 +24,169 @@
         </nav>
         <h1 class="logo">
             <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo.png" alt="logo">
+                <img src="img/index/index-topbar/logo.svg" alt="logo">
             </a>
         </h1>
         <nav>
             <ul class="icon">
                 <li class="box">
-                    <div class="signup"></div>
-                    <div class="word"><a href="signup.html">立即報名</a></div>
+                    <!-- 0.原本的底色 -->
+                    <!-- <div class="signup"></div> -->
+                    <!-- 改用btn -->
+                    <div >
+                        <div class="m_btn">
+                            <a href="signup.html">快速報名</a>
+                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                        </div>
+                    </div>
+                    <!-- 0.原本 -->
+                    <!-- <div class="word">
+                        <a href="signup.html">快速報名</a>
+                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
+                    </div> -->
+
                 </li>
                 <li>
-                    <span><img src="img/index/index-topbar/user.png" alt="登入"></span>
+                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
                     <span><a href="login.html">登入</a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/newcar.png" alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
 
-    <!-- media內容 -->
-    <div id="media">
-        <div class="all_section">
-            <div class="media_section">
-                <div class="media_nav">
-                    <div>
-                        <h3> MEDIA</h3>
-                    </div>
-                    <div>
-                        <h1> 質感文章</h1>
-                    </div>
-                </div>
-                <div class="media_menu">
-                    <!-- 搭配JS -->
-                    <div><a href="">全部文章</a></div>
-                    <div><a href="">活動花絮</a></div>
-                    <div><a href="">好評分享</a></div>
-                    <div><a href="">採訪報導</a></div>
-                    <div><a href="">美學分享</a></div>
-                </div>
-                <div class="media_main">
-                    <div class="media_box">
-                        <div class="media_img">
-                            <img src="img/media/花.png" alt="">
-                        </div>
-                        <div class="media_block">
-                            <div class="media_row">
-                                <div class="media_date"> 2023.1.16</div>
-                                <div class="media_title">【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學習吧！</div>
-                                <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？ 質感工作室<br>特別邀請到插花網...</div>
-                            </div>
-                            <div class="media_more">
-                                <a href="media.html">查看更多</a>
-                                <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-
-                <!-- <div>
-                    <div class="media_date">
-                        2023.1.16
-                    </div>
-                    <div>
-                        【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學習吧！
-                    </div>
-                    <div>
-                        您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...
-                    </div>
-                    <div>
-                        <div>
-                            閱讀更多
-                        </div>
-                        <div>
-                            <img src="" alt="">
-                        </div>
-                    </div>
-                </div> -->
+    <!-- 2.media  -->
+    <main id="media">
+        <section>
+            <div class="title">
+                <h3>MEDIA</h3>
+                <h1>蘵感文章</h1>
+                <!-- 按鈕 -->
+                <ul>
+                    <button><a href="">
+                            <h2>全部文章</h2>
+                        </a></button>
+                    <button><a href="">
+                            <h2>美學分享</h2>
+                        </a></button>
+                    <button><a href="">
+                            <h2>活動花絮</h2>
+                        </a></button>
+                    <button><a href="">
+                            <h2>好評分享</h2>
+                        </a></button>
+                    <button><a href="">
+                            <h2>採訪報導</h2>
+                        </a></button>
+                </ul>
             </div>
-        </div>
-    </div>
-    </div>
-
- <!-- +a -->
-    <!-- 8.footer -->
+            <div class="list_block">
+                <article class="list_item">
+                    <figure><img src="img/media/media-1.jpg" alt=""></figure>
+                    <div class="list_box">
+                        <h4>2023.1.16</h4>
+                        <p>
+                        <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
+                        </p>
+                        <p>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
+                        </p>
+                        <div class="media_more">
+                            <a href="media_page_nov.html">閱讀更多</a>
+                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                        </div>
+                    </div>
+                </article>
+                <article class="list_item">
+                    <figure><img src="img/media/media-2.jpg" alt=""></figure>
+                    <div class="list_box">
+                        <h4>2023.1.16</h4>
+                        <p>
+                        <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
+                        </p>
+                        <p>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
+                        </p>
+                        <div class="media_more">
+                            <a href="media.html">閱讀更多</a>
+                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                        </div>
+                    </div>
+                </article>
+                <article class="list_item">
+                    <figure><img src="img/media/media-3.jpg" alt=""></figure>
+                    <div class="list_box">
+                        <h4>2023.1.16</h4>
+                        <p>
+                        <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
+                        </p>
+                        <p>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
+                        </p>
+                        <div class="media_more">
+                            <a href="media.html">閱讀更多</a>
+                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                        </div>
+                    </div>
+                </article>
+                <article class="list_item">
+                    <figure><img src="img/media/media-4.jpg" alt=""></figure>
+                    <div class="list_box">
+                        <h4>2023.1.16</h4>
+                        <p>
+                        <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
+                        </p>
+                        <p>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
+                        </p>
+                        <div class="media_more">
+                            <a href="media.html">閱讀更多</a>
+                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                        </div>
+                    </div>
+                </article>
+                <article class="list_item">
+                    <figure><img src="img/media/media-5.jpg" alt=""></figure>
+                    <div class="list_box">
+                        <h4>2023.1.16</h4>
+                        <p>
+                        <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
+                        </p>
+                        <p>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
+                        </p>
+                        <div class="media_more">
+                            <a href="media.html">閱讀更多</a>
+                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                        </div>
+                    </div>
+                </article>
+                <article class="list_item">
+                    <figure><img src="img/media/media-6.jpg" alt=""></figure>
+                    <div class="list_box">
+                        <h4>2023.1.16</h4>
+                        <p>
+                        <h2>【課程快訊】手作花藝課程邀請網紅講師Lori分享插花技巧，快來一起學 <br> 習吧！</h2>
+                        </p>
+                        <p>
+                        <h3>您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？蘵感工作室<br>特別邀請到插花網...</h3>
+                        </p>
+                        <div class="media_more">
+                            <a href="media.html">閱讀更多</a>
+                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+    </main>
+    <!-- +a -->
+    <!-- footer -->
     <div id="footer">
         <!-- <div class="all_section"> -->
         <div class="footer_ul">
@@ -183,12 +256,6 @@
             </ul>
         </div>
     </div>
-
-
-
-
-
-
 
 </body>
 
