0510 index footer renew svg
0510 index footer renew svg

--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -241,7 +241,7 @@
 
             </div>
             <div class="b">
-                <img src="img/index/index-teachers/logo.svg" alt="">
+                <img src="img/index/index-teachers/logo(棕色).svg" alt="">
             </div>
             <ul>
                 <!--師資Jaclyn Wu  -->
@@ -341,7 +341,7 @@
                 </div>
                 <div class="news_more">
                     <a href="news.html">查看更多</a>
-                    <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                    <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                 </div>
             </nav>
             <span>
@@ -357,7 +357,7 @@
                                 <hr>
                             </div>
                             <div class="news_img">
-                                <a href="news_page_nov.html"><img src="img/index/index-news/smell.png" alt=""></a>
+                                <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                             </div>
                             </p>
                         </tr>
@@ -374,7 +374,7 @@
                                 <hr>
                             </div>
                             <div class="news_img">
-                                <a href="news_page_oct.html"><img src="img/index/index-news/smell.png" alt=""></a>
+                                <a href="news_page_oct.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                             </div>
                             </p>
                         </tr>
@@ -388,7 +388,7 @@
                                 <hr>
                             </div>
                             <div class="news_img">
-                                <a href="news_page_flower.html"><img src="img/index/index-news/smell.png" alt=""></a>
+                                <a href="news_page_flower.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                             </div>
                             </p>
                         </tr>
@@ -402,7 +402,7 @@
                                 <hr>
                             </div>
                             <div class="news_img">
-                                <a href="news_page_stop.html"><img src="img/index/index-news/smell.png" alt=""></a>
+                                <a href="news_page_stop.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                             </div>
                             </p>
                         </tr>
@@ -416,7 +416,7 @@
                                 <hr>
                             </div>
                             <div class="news_img">
-                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/smell.png" alt=""></a>
+                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                             </div>
                             </p>
                         </tr>
@@ -439,7 +439,7 @@
                 </div> -->
             </div>
             <div class="media_logo">
-                <img src="img/index/index-media/zangan 大logo.png" alt="">
+                <img src="img/index/index-about/EN-logo.svg" alt="">
             </div>
         </div>
         <!-- 第一直欄區塊 -->
@@ -457,7 +457,7 @@
                             <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                             <div class="media_more">
                                 <a href="media.html">閱讀更多</a>
-                                <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                                <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                             </div>
                         </li>
                     </div>
@@ -470,7 +470,7 @@
                             <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                             <div class="media_more">
                                 <a href="media.html">閱讀更多</a>
-                                <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                                <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                             </div>
                         </li>
                     </div>
@@ -488,7 +488,7 @@
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
                 </div>
@@ -501,7 +501,7 @@
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
                 </div>
@@ -518,7 +518,7 @@
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
                 </div>
@@ -531,7 +531,7 @@
                         <div class="media_text">您是否曾經想過要自己製作一束美麗的花束，但卻不知道該如何下手呢？質感工作室特別邀請到插花網...</div>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </li>
                 </div>
@@ -551,8 +551,7 @@
                     <div class="footer_nav">
                         <li>
                             <h1>
-                                <img src="img/index/index-footer/logo.png" alt="">
-                                <img src="img/index/index-footer/中文logo.png" alt="">
+                                <img src="img/index/index-footer/logo all.svg" alt="">
                             </h1>
                         </li>
                     </div>
@@ -583,7 +582,7 @@
                     </div>
                     <div class="footer_main">
                         <li>
-                            <img src="img/index/index-footer/社群軟體icon.png" alt="">
+                            <img src="img/index/index-footer/社群軟體icon.svg" alt="">
                         </li>
                     </div>
                 </div>
