0510 index topbar white+banner
0510 index topbar white+banner

--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- 精簡code +a +svg+btn-->
-    <!-- topbar -->
+    <!-- topbar white-->
     <header id="topbar">
         <nav>
             <ul class="menu">
@@ -35,7 +35,7 @@
                     <!-- 0.原本的底色 -->
                     <!-- <div class="signup"></div> -->
                     <!-- 改用btn -->
-                    <div >
+                    <div>
                         <div class="m_btn">
                             <a href="signup.html">快速報名</a>
                             <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
@@ -54,15 +54,34 @@
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
+
     <!-- 2.banner -->
     <main id="banner">
-
+        <!-- 放背景影片 -->
+        <div>
+            <video src="img/index/index-banner/banner-video.mp4" autoplay muted loop></video>
+        </div>
+        <div class="sec">
+            <div class="logo">
+                <img src="img/index/index-banner/logo.svg" width="80" height="80" alt="">
+            </div>
+            <div class="text">
+                <h1>Finding inner peace through creation</h1>
+                <h2>讓人們從日常瑣事中解放出來</h2>
+                <h4>並在創作中找到心靈的寧靜-</h4>
+                <div class="more">
+                    <h3>查看課程</h3>
+                    <img src="img/index/index-banner/arrow(白).svg" alt="">
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
     <!-- 3.about -->
     <div id=" about">
