--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-    <!-- 精簡code +a +svg+btn-->
-    <!-- topbar white-->
+    <!-- 精簡code+a+svg+btn-->
+    <!-- 1.topbar white-->
     <header id="topbar">
         <nav>
             <ul class="menu">
@@ -26,27 +26,18 @@
         </nav>
         <h1 class="logo">
             <a href="index.html">
-                <img src="img/index/index-topbar/logo.svg" alt="logo">
+                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
             </a>
         </h1>
         <nav>
             <ul class="icon">
                 <li class="box">
-                    <!-- 0.原本的底色 -->
-                    <!-- <div class="signup"></div> -->
-                    <!-- 改用btn -->
                     <div>
                         <div class="m_btn">
                             <a href="signup.html">快速報名</a>
                             <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
                         </div>
                     </div>
-                    <!-- 0.原本 -->
-                    <!-- <div class="word">
-                        <a href="signup.html">快速報名</a>
-                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
-                    </div> -->
-
                 </li>
                 <li>
                     <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
@@ -83,6 +74,7 @@
         </div>
         </div>
     </main>
+
     <!-- 3.about -->
     <div id=" about">
         <div class="about_nav">
@@ -125,8 +117,8 @@
             <!-- <div class="course_nav"> -->
             <li class="f">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>藝術插花</h3>
                     </span>
@@ -151,8 +143,8 @@
             <!-- 自由繪畫 paint-->
             <li class="pai">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>自由繪畫</h3>
                     </span>
@@ -176,8 +168,8 @@
             <!--蘵感手作 handmade -->
             <li class="h">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>蘵感手作</h3>
                     </span>
@@ -201,8 +193,8 @@
             <!-- 香水特製Lab purfume -->
             <li class="pu">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>香水特製Lab</h3>
                     </span>
@@ -226,8 +218,8 @@
             <!-- 小點茶藝工坊 dessert-->
             <li class="d">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>小點茶藝工坊</h3>
                     </span>
@@ -435,7 +427,8 @@
                                 <hr>
                             </div>
                             <div class="news_img">
-                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
+                                <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg"
+                                        alt=""></a>
                             </div>
                             </p>
                         </tr>
