--- a/蘵感ZanGan上傳/media.html
+++ b/蘵感ZanGan上傳/media.html
@@ -24,7 +24,7 @@
         </nav>
         <h1 class="logo">
             <a href="index.html">
-                <img src="img/index/index-topbar/logo.svg" alt="logo">
+                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
             </a>
         </h1>
         <nav>
@@ -98,7 +98,7 @@
                         </p>
                         <div class="media_more">
                             <a href="media_page_nov.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
                 </article>
@@ -114,7 +114,7 @@
                         </p>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
                 </article>
@@ -130,7 +130,7 @@
                         </p>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
                 </article>
@@ -146,7 +146,7 @@
                         </p>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
                 </article>
@@ -162,7 +162,7 @@
                         </p>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
                 </article>
@@ -178,7 +178,7 @@
                         </p>
                         <div class="media_more">
                             <a href="media.html">閱讀更多</a>
-                            <img src="img/index/index-news/深色右箭頭1x.png" alt="箭頭icon">
+                            <img src="img/index/index-about/arrow(黑).svg" alt="箭頭icon">
                         </div>
                     </div>
                 </article>
