--- a/蘵感ZanGan上傳/topbar.html
+++ b/蘵感ZanGan上傳/topbar.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow" />
-    <title>topbar green</title>
-    <link rel="stylesheet" href="topbar green.css">
+    <title>topbar white+banner</title>
+    <link rel="stylesheet" href="topbar.css">
     <!-- <script src="Javascript.js"></script> -->
 
 </head>
 
 <body>
-   <!-- 精簡code+a+svg+btn-->
+    <!-- 精簡code +a +svg+btn-->
     <!-- topbar white-->
     <header id="topbar">
         <nav>
@@ -51,10 +51,45 @@
             </ul>
         </nav>
     </header>
+
     <!-- 2.banner -->
     <main id="banner">
-
+        <!-- 放背景影片 -->
+        <div>
+            <video src="img/index/index-banner/banner-video.mp4" autoplay muted loop></video>
+        </div>
+        <div class="sec">
+            <div class="logo">
+                <img src="img/index/index-banner/logo.svg" width="80" height="80" alt="">
+            </div>
+            <div class="text">
+                <h1>Finding inner peace through creation</h1>
+                <h2>讓人們從日常瑣事中解放出來</h2>
+                <h4>並在創作中找到心靈的寧靜-</h4>
+                <div class="more">
+                    <h3>查看課程</h3>
+                    <img src="img/index/index-banner/arrow(白).svg" alt="">
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- 3.about -->
     <div id=" about">
         <div class="about_nav">
@@ -97,8 +132,8 @@
             <!-- <div class="course_nav"> -->
             <li class="f">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>藝術插花</h3>
                     </span>
@@ -123,8 +158,8 @@
             <!-- 自由繪畫 paint-->
             <li class="pai">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>自由繪畫</h3>
                     </span>
@@ -148,8 +183,8 @@
             <!--蘵感手作 handmade -->
             <li class="h">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>蘵感手作</h3>
                     </span>
@@ -173,8 +208,8 @@
             <!-- 香水特製Lab purfume -->
             <li class="pu">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>香水特製Lab</h3>
                     </span>
@@ -198,8 +233,8 @@
             <!-- 小點茶藝工坊 dessert-->
             <li class="d">
                 <span class="course_class">
-                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg" width="14"
-                            height="20" alt="logo"></span>
+                    <span class="course_img"><img class="course_img" src="img/index/index-course/logo（橢圓綜）.svg"
+                            width="14" height="20" alt="logo"></span>
                     <span class="course_text">
                         <h3>小點茶藝工坊</h3>
                     </span>
