--- a/蘵感ZanGan上傳/news.html
+++ b/蘵感ZanGan上傳/news.html
@@ -11,8 +11,8 @@
 
 <body>
 
-    <!-- 精簡code +a -->
-    <!-- header -->
+    <!-- 精簡code +a +svg+btn-->
+    <!-- topbar -->
     <header id="topbar">
         <nav>
             <ul class="menu">
@@ -24,28 +24,40 @@
         </nav>
         <h1 class="logo">
             <a href="index.html">
-                <img src="img/index/index-topbar/cn-logo.png" alt="logo">
+                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
             </a>
         </h1>
         <nav>
             <ul class="icon">
                 <li class="box">
-                    <div class="signup"></div>
-                    <div class="word"><a href="signup.html">立即報名</a></div>
+                    <!-- 0.原本的底色 -->
+                    <!-- <div class="signup"></div> -->
+                    <!-- 改用btn -->
+                    <div >
+                        <div class="m_btn">
+                            <a href="signup.html">快速報名</a>
+                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                        </div>
+                    </div>
+                    <!-- 0.原本 -->
+                    <!-- <div class="word">
+                        <a href="signup.html">快速報名</a>
+                        <span><img src="img/index/index-topbar/立即報名（白）.svg" alt=""></span>
+                    </div> -->
+
                 </li>
                 <li>
-                    <span><img src="img/index/index-topbar/user.png" alt="登入"></span>
+                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
                     <span><a href="login.html">登入</a></span>
                 </li>
                 <li>
                     <a href="cart.html">
-                        <img src="img/index/index-topbar/newcar.png" alt="購物車">
+                        <img src="img/index/index-topbar/cart.svg"  alt="購物車">
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-
 
     <!-- 2.news  -->
     <!-- 最新消息 -->
@@ -81,7 +93,7 @@
                                     <hr>
                                 </div>
                                 <div class="news_img">
-                                    <a href="news_page_nov.html"><img src="img/index/index-news/smell.png"
+                                    <a href="news_page_nov.html"><img src="img/index/index-news/arrow(白).svg"
                                             alt=""></a>
                                 </div>
                                 </p>
@@ -99,7 +111,7 @@
                                     <hr>
                                 </div>
                                 <div class="news_img">
-                                    <a href="news_page_oct.html"><img src="img/index/index-news/smell.png" alt=""></a>
+                                    <a href="news_page_oct.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                                 </div>
                                 </p>
                             </tr>
@@ -113,7 +125,7 @@
                                     <hr>
                                 </div>
                                 <div class="news_img">
-                                    <a href="news_page_flower.html"><img src="img/index/index-news/smell.png"
+                                    <a href="news_page_flower.html"><img src="img/index/index-news/arrow(白).svg"
                                             alt=""></a>
                                 </div>
                                 </p>
@@ -128,7 +140,7 @@
                                     <hr>
                                 </div>
                                 <div class="news_img">
-                                    <a href="news_page_stop.html"><img src="img/index/index-news/smell.png" alt=""></a>
+                                    <a href="news_page_stop.html"><img src="img/index/index-news/arrow(白).svg" alt=""></a>
                                 </div>
                                 </p>
                             </tr>
@@ -142,7 +154,7 @@
                                     <hr>
                                 </div>
                                 <div class="news_img">
-                                    <a href="news_page_stoppaint.html"><img src="img/index/index-news/smell.png"
+                                    <a href="news_page_stoppaint.html"><img src="img/index/index-news/arrow(白).svg"
                                             alt=""></a>
                                 </div>
                                 </p>
@@ -165,8 +177,7 @@
                     <div class="footer_nav">
                         <li>
                             <h1>
-                                <img src="img/index/index-footer/logo.png" alt="">
-                                <img src="img/index/index-footer/中文logo.png" alt="">
+                                <img src="img/index/index-footer/logo all.svg" alt="">
                             </h1>
                         </li>
                     </div>
