--- a/蘵感ZanGan上傳/index.html
+++ b/蘵感ZanGan上傳/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- 精簡code+a+svg+btn-->
     <!-- 1.topbar white-->
-    <header id="topbar">
+    <header id="topbarw">
         <nav>
             <ul class="menu">
                 <li><a href="about.html">關於蘵感</a></li>
@@ -68,12 +68,53 @@
                 <h4>並在創作中找到心靈的寧靜-</h4>
                 <div class="more">
                     <h3>查看課程</h3>
-                    <img src="img/index/index-banner/arrow(白).svg" alt="">
+                    <a href="course.html">
+                        <img src="img/index/index-banner/arrow(白).svg" alt="">
+                    </a>
                 </div>
             </div>
         </div>
         </div>
     </main>
+
+    <!-- 精簡code+a+svg+btn-->
+    <!-- 1.2topbar green-->
+    <div id="topbar">
+        <nav>
+            <ul class="menu">
+                <li><a href="about.html">關於蘵感</a></li>
+                <li><a href="news.html">最新消息</a></li>
+                <li><a href="course.html">課程介紹</a></li>
+                <li><a href="media.html">蘵感文章</a></li>
+            </ul>
+        </nav>
+        <h1 class="logo">
+            <a href="index.html">
+                <img src="img/index/index-topbar/cn-logo1.svg" alt="logo">
+            </a>
+        </h1>
+        <nav>
+            <ul class="icon">
+                <li class="box">
+                    <div>
+                        <div class="m_btn">
+                            <a href="signup.html">快速報名</a>
+                            <img src="img/index/index-topbar/立即報名（白）.svg" alt="">
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <span><img src="img/index/index-topbar/user.svg" width="20" height="20" alt="登入"></span>
+                    <span><a href="login.html">登入</a></span>
+                </li>
+                <li>
+                    <a href="cart.html">
+                        <img src="img/index/index-topbar/cart.svg" alt="購物車">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 
     <!-- 3.about -->
     <div id=" about">
@@ -123,7 +164,9 @@
                         <h3>藝術插花</h3>
                     </span>
                     <span>
-                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        <a href="course_flower.html">
+                            <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        </a>
                     </span>
                 </span>
                 <div>
@@ -132,10 +175,6 @@
                         <p>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
                         </p>
-                        <div class="course_more">
-                            <a href="course_flower.html">查看更多</a>
-                            <img src="img/index/index-course/arrow(白).png" alt="">
-                        </div>
                     </div>
                 </div>
             </li>
@@ -149,7 +188,9 @@
                         <h3>自由繪畫</h3>
                     </span>
                     <span>
-                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        <a href="course_paint.html">
+                            <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        </a>
                     </span>
                 </span>
                 <div>
@@ -157,11 +198,7 @@
                     <span class="course_p">
                         <p>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p>
-                        <div class="course_more">
-                            <a href="course_paint.html">查看更多></a>
-                            <img src="img/index/index-course/arrow(白).png" alt="">
-                        </div>
+                        </p>  
                     </span>
                 </div>
             </li>
@@ -174,7 +211,9 @@
                         <h3>蘵感手作</h3>
                     </span>
                     <span>
-                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        <a href="course_handmade.html">
+                            <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        </a>
                     </span>
                 </span>
                 <div>
@@ -182,11 +221,7 @@
                     <span class="course_p">
                         <p>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
-                        </p>
-                        <div class="course_more">
-                            <a href="course_handmade.html">查看更多></a>
-                            <img src="img/index/index-course/logo.png" alt="">
-                        </div>
+                        </p> 
                     </span>
                 </div>
             </li>
@@ -199,7 +234,9 @@
                         <h3>香水特製Lab</h3>
                     </span>
                     <span>
-                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        <a href="course_purfume.html">
+                            <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        </a>
                     </span>
                 </span>
                 <div>
@@ -208,10 +245,6 @@
                         <p>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
                         </p>
-                        <div class="course_more">
-                            <a href="course_purfume.html">查看更多></a>
-                            <img src="img/index/index-course/白右箭頭1x.png" alt="">
-                        </div>
                     </span>
                 </div>
             </li>
@@ -224,7 +257,9 @@
                         <h3>小點茶藝工坊</h3>
                     </span>
                     <span>
-                        <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        <a href="course_dessert.html">
+                            <img src="img/index/index-course/圓圈arrow(白).svg" width="30" height="30" alt="">
+                        </a>
                     </span>
                 </span>
                 <div>
@@ -233,10 +268,6 @@
                         <p>
                             用鮮花創作出美麗的花藝作<br>品，學習插花技巧、色彩搭<br>配、創意設計，放鬆心情，<br>享受與自然互動的時光。
                         </p>
-                        <div class="course_more">
-                            <a href="course_dessert.html">查看更多></a>
-                            <img src="img/index/index-course/白右箭頭1x.png" alt="">
-                        </div>
                     </span>
                 </div>
             </li>
